tests/snapshots/preview__insta_preview_nul_char.snap
---
source: tests/preview.rs
expression: h.buffer_view()
---
"                                        │00000000  27 61 00 62 27               "
"                                        │00000005                               "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> ab                                    │                                       "
"  1/1                                0/0│                                       "
">                                       │                                       "
