tests/snapshots/preview__insta_preview_plus-3.snap
---
source: tests/preview.rs
expression: h.buffer_view()
---
"                                        │b                                      "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> c                                     │                                       "
" >b                                     │                                       "
"  a                                     │                                       "
"  3/3 [1]                            2/0│                                       "
">                                       │                                       "
