tests/snapshots/preview__insta_preview_preserve_quotes.snap
---
source: tests/preview.rs
expression: h.buffer_view()
---
"                                        │X'"ABC"'X                              "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> '"ABC"'                               │                                       "
"  1/1                                0/0│                                       "
">                                       │                                       "
