tests/snapshots/preview__insta_preview_window_down.snap
---
source: tests/preview.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  b                                                                             "
"> a                                                                             "
"  2/2                                                                        0/0"
">                                                                               "
"────────────────────────────────────────────────────────────────────────────────"
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
