tests/snapshots/preview__insta_preview_wrap.snap
---
source: tests/preview.rs
expression: h.buffer_view()
---
"a        │                                                                      "
"bbbbbbbb │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │> x                                                                   "
"         │  1/1                                                              0/0"
"         │>                                                                     "
