tests/snapshots/preview__preview_image_lenna@001.snap
---
source: tests/preview.rs
description: "input: items [\"examples/Lenna.png\"]\noptions: --preview {} --image halfblocks"
---
"                                        │                                512x512"
"                                        │▀▄▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄▀▀▄▄▄▀▀▀▄▄▀▄▄▀▀"
"                                        │▄▀▀▄▀▀▀▄▄▀▀▀▀▀▀▄▄▄▄▄▀▄▀▀▀▀▀▀▀▀▀▀▀▄▄▀▀▀▀"
"                                        │▀▀▀▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄▄▄▄▄▀▀▄▄▀▀▀▀▄▀▀▀▀▀▄▄"
"                                        │▀▄▀▀▄▄▀▀▀▄▀▀▄▄▄▄▀▀▄▄▀▀▄▄▄▀▄▄▀▀▀▀▀▀▄▄▄▄▄"
"                                        │▄▄▀▄▀▀▄▀▀▄▀▄▄▀▀▄▄▀▀▀▀▀▀▀▄▄▄▀▄▄▄▄▄▀▀▄▄▄▀"
"                                        │▀▄▄▄▄▄▀▀▄▄▄▀▀▄▄▀▀▀▀▀▀▀▀▀▀▀▄▄▄▀▀▀▀▄▄▄▄▀▄"
"                                        │▄▄▄▄▄▀▀▀▀▄▄▄▀▀▀▀▀▀▀▀▀▀▀▄▄▄▄▀▀▀▀▀▄▄▄▄▀▀▀"
"                                        │▄▀▀▄▄▀▀▀▄▀▄▄▀▀▀▀▀▀▀▄▄▄▄▀▀▀▀▀▀▀▀▄▄▄▄▄▄▄▀"
"                                        │▀▀▀▄▄▄▄▄▄▀▀▀▀▀▀▀▀▄▄▄▄▀▀▄▄▄▄▀▄▄▀▄▄▄▀▀▀▀▀"
"                                        │▀▀▀▄▄▀▀▀▄▄▀▀▄▄▀▀▄▄▄▀▀▀▀▀▀▀▀▀▄▀▄▄▄▀▀▄▄▄▀"
"                                        │▀▀▀▄▄▄▄▄▀▀▄▄▄▄▀▄▄▀▄▄▄▄▄▄▄▄▄▄▄▀▄▄▀▀▀▀▄▄▄"
"                                        │▀▀▀▀▀▄▀▀▄▄▀▀▄▄▄▀▀▀▀▀▀▀▀▀▄▀▀▀▄▄▄▄▀▀▀▄▄▄▄"
"                                        │▀▄▄▀▄▀▀▀▀▀▄▄▄▄▀▀▄▄▀▀▀▄▄▄▀▀▀▄▀▄▄▀▀▀▄▄▄▄▄"
"                                        │▀▄▀▄▄▄▀▀▄▄▄▄▀▀▀▄▀▀▀▀▄▀▀▀▀▀▄▄▄▄▄▄▄▀▄▄▄▄▀"
"                                        │▄▀▀▀▄▄▀▄▀▀▄▀▀▄▄▀▀▀▀▀▀▄▄▄▄▄▄▄▄▀▀▀▀▀▄▀▀▀▀"
"                                        │▄▄▀▄▄▀▀▀▀▀▀▄▄▄▄▄▄▄▀▄▄▄▄▀▄▄▄▀▄▄▄▄▄▄▄▀▀▄▄"
"                                        │▀▄▀ ▀▀▀▄▀▀▀▀▀▄▄▄▄▄▄▄▀▀▀▀▀▀▄▄▄▀▀▀▄▄▀▀▄▀▀"
"                                        │▀▄▄▀▀▄▀▀▄▀▄▄▀▀▀▄▄▀▄▄▄▀▀▀▀▀▀▄▀▀▀▀▄▀▀▀▀▀▀"
"                                        │▀▀▄▄▀▀▄▄▄▄▄▀▀ ▄▄▄▄▀▀▄▄▄▀▀▀▀▀▄▄▄▄▀▀▄▀▄▀▀"
"                                        │▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀"
"> examples/Lenna.png                    │                                       "
"  1/1                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
