tests/snapshots/preview__preview_image_missing@001.snap
---
source: tests/preview.rs
description: "input: items [\"examples/missing.png\"]\noptions: --preview {} --image halfblocks"
---
"                                        │Failed to open examples/missing.png as "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> examples/missing.png                  │                                       "
"  1/1                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
