tests/snapshots/preview__preview_image_navigation@001.snap
---
source: tests/preview.rs
description: "input: items [\"examples/missing.png\", \"examples/Lenna.png\"]\noptions: --preview {} --image halfblocks"
---
"                                        │Failed to open examples/missing.png as "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"  examples/Lenna.png                    │                                       "
"> examples/missing.png                  │                                       "
"  2/2                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
